# milk-streamtelemetry-cca

./: .gitignore  CMakeLists.txt  README.md  cca.c  ccaA.fits  ccaB.fits  common.c  common.h  cubeshuffle  cubeshuffle.c  main.c  mkearthseq.c  modeval.c  pca.c  pcamerge.c  shuffled.fits  verify_corr.c
test_output/: cca_corner.gp  pca_corner.gp  report.md  runtest
